--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
 
                 <!-- Formulaire de recherche -->
                 <form class="form-inline mt-2 mt-md-0">
-                    <input class="form-control mr-sm-2" type="text" placeholder="Search anime 💬" data-toggle="dropdown" id="mySearch" />
+                    <input list="Suggestion" class="form-control mr-sm-2" type="text" placeholder="Search anime 💬" id="mySearch" />
                     <!-- Element dynamique -->
-                    <div class="dropdown-menu">
-                        <a class="dropdown-item" href="javascript:void(0);">Fate/Zero</a>
-                        <a class="dropdown-item" href="javascript:void(0);">Fate/Zero Season 2</a>
-                    </div>
+                    <datalist id="Suggestion">
+                        <!-- <a class="dropdown-item" href="javascript:void(0);">Fate/Zero</a>
+                        <a class="dropdown-item" href="javascript:void(0);">Fate/Zero Season 2</a> -->
+                    </datalist>
                     <!-- /Element dynamique -->
                 </form>
                 <!-- /Formulaire de recherche -->
@@ -147,7 +147,7 @@
     <!-- //////////////////////////////////////////////////////////// -->
 
     <!-- Attention à l'ordre de chargement quand vous ajoutez un script ! -->
-    <script src="js/app.js"></script>
+    <script src="js/appv2.js"></script>
    <!--  <script src="https://code.jquery.com/jquery-3.x-git.slim.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
