--- a/indexold.html
+++ b/indexold.html
@@ -60,7 +60,7 @@
 
                                 <div class="d-flex justify-content-between align-items-center">
                                     <div class="btn-group">
-                                        <button type="button" class="btn btn-sm btn-outline-secondary" data-toggle="modal" data-target="#modal-detail-anime">
+                                        <button type="button" class="btn btn-sm btn-outline-secondary" data-toggle="collapse" data-target="#modal-detail-anime">
                                             Info
                                         </button>
                                     </div>
@@ -90,11 +90,13 @@
             <p>👹 AnimEstiam</p>
         </div>
     </footer>
+    <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapse2" aria-expanded="false" aria-controls="collapse2">Bouton</button>
+    <div class="collapse" id="collapse2"><p>Texte du deuxième élément qui collapse.</p></div>
 
     <!-- //////////////////////////////////////////////////////////// -->
     <!-- MODAL -->
     <!-- //////////////////////////////////////////////////////////// -->
-    <div class="modal fade" id="modal-detail-anime">
+    <div class="collapse fade" id="modal-detail-anime">
         <div class="modal-dialog modal-lg">
             <div class="modal-content">
                 <div class="modal-header">
@@ -146,16 +148,7 @@
     <!-- /MODAL -->
     <!-- //////////////////////////////////////////////////////////// -->
 
-    <!-- Attention à l'ordre de chargement quand vous ajoutez un script ! -->
-    <script src="js/appv2.js"></script>
-   <!--  <script src="https://code.jquery.com/jquery-3.x-git.slim.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="./scripts/api/api.js"></script>
-    <script src="./scripts/api/resource.js"></script>
-    <script src="./scripts/api/animeResource.js"></script>
-    <script src="./scripts/api/searchResource.js"></script>
-    <script src="./scripts/main.js"></script> -->
+    
 </body>
 
 </html>
