add link to trailer and remove inuse files

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 <div class="modal-header">
                     <!-- Element dynamique -->
                     <h5 class="modal-title" id="titleAnimePopUp">🔥 Fate/Zero</h5>
-                    <a class="btn btn-link" title="Click to see trailer" target="_blank" href="https://www.youtube.com/embed/21-1-ioCfXY?enablejsapi=1&wmode=opaque&autoplay=1">🎥 Trailer</a>
+                    <a class="btn btn-link" title="Click to see trailer" target="_blank" href="https://www.youtube.com/embed/21-1-ioCfXY?enablejsapi=1&wmode=opaque&autoplay=1" id="trailerPopUp">🎥 Trailer</a>
                     <!-- /Element dynamique -->
                     
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">&times;</button>
